# sejongE

./: .gitignore  README.md
.claude/: settings.json
.claude/hooks/: portfolio_on_todo.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/eval/: dump_answers.py
backend/eval/golden/: bigyogwa.json
backend/src/sejong_rag/: __init__.py  cli.py  config.py  models.py  report.py  time_utils.py
backend/src/sejong_rag/agent/: factory.py  llm.py  orchestrator.py  profile.py  prompts.py
backend/src/sejong_rag/api/: deps.py  main.py  routes_chat.py  schemas.py  session.py
backend/src/sejong_rag/index/: build_index.py  embedder.py  store.py  vectorstore.py
backend/src/sejong_rag/ingest/: http_fetcher.py  pipeline.py  scheduler.py
backend/src/sejong_rag/ingest/sites/: bigyogwa.py  calendar.py  labs.py
backend/src/sejong_rag/normalize/: chunker.py  dedup.py  html_clean.py
backend/src/sejong_rag/retrieve/: bm25.py  filters.py  hybrid.py  retriever.py  router.py  tokenize.py  vector.py
backend/tests/: test_api.py  test_bigyogwa_parser.py  test_calendar_parser.py  test_etl.py  test_filters.py  test_hybrid.py  test_labs_parser.py  test_models.py  test_orchestrator.py  test_pipeline.py  test_profile.py  test_prompts.py  test_report.py  test_router.py  test_scheduler.py  test_store.py  test_time_utils.py  test_vector.py
backend/tests/fixtures/: bigyogwa_detail.html  bigyogwa_detail_4253.html  bigyogwa_list.html  calendar_2026.html  dept_cse.html  professor_cse.json
frontend/: README.md  package-lock.json  package.json
frontend/lib/: api.ts
(+12 files in other folders)
